# brainfuck-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  a.ll  a.out  test.c  test.ll
crates/analyze/: Cargo.toml
crates/analyze/src/: lib.rs  main.rs
crates/ast/src/: inst.rs  lib.rs  opt.rs
crates/bytecode-backend/: Cargo.toml
crates/bytecode-backend/src/: interpreter.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/llvm-backend/: Cargo.toml
crates/llvm-backend/src/: compiler.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs  scanner.rs  token.rs
crates/runner/: Cargo.toml
crates/runner/benches/: bench.rs
crates/runner/examples/: hello.rs  input.rs  mandelbrot.rs
crates/runner/src/: lib.rs
crates/wasm-backend/: Cargo.toml
crates/wasm-backend/src/: compiler.rs
examples/: hello.rs  input.rs
src/: ast.rs  converter.rs  interpreter.rs  lib.rs  main.rs  op.rs  parser.rs  scanner.rs  token.rs  vm.rs
src/llvm/: compiler.rs
src/vm/: compiler.rs  interpreter.rs
