[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ast = { path = "../ast" }
bytecode-backend = { path = "../bytecode-backend" }
llvm-backend = { path = "../llvm-backend" }

[dev-dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
